packages/isar_generator/test/errors/class/abstract.dart
// must not be abstract

import 'package:isar/isar.dart';

@Collection()
abstract class Model {
  int? id;
}
